--- a/essential_meals_project/em_website/templates/em_website/calendar.html
+++ b/essential_meals_project/em_website/templates/em_website/calendar.html
@@ -109,7 +109,7 @@
             <div class="clearfix">
                 <a class="btn btn-info left" href="{% url 'em_calendar' %}?{{ prev_month }}"> Previous Month </a>
                 <a class="btn btn-info right" href="{% url 'em_calendar' %}?{{ next_month }}"> Next Month </a>
-                <a class="btn btn-info right" href="{% url 'event_new' %}"> New Event </a>
+                <a class="btn btn-info right" href="{% url 'event_new' %}"> Add a Meal </a>
             </div>
             {{ calendar }}
 
